# acomp

./: LICENSE  README.md  bubble.py  fibonacci.py  final.py  insertion.py  main.py  max.py  merge.py  pyproject.toml  quick.py  selection.py
1/: ex1.py  ex2.py  ex3.py  ex4.py  fatorial.py
2/: ex1.py  ex2.py  ex4.py  ex5.py  ex6.py
