[tool.poetry]
name = "acomp"
version = "0.1.0"
description = ""
authors = ["WalberBeltrame <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
bintrees = "^2.2.0"
networkx = "^2.8.3"
structout = "^0.1.41"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
